tests/paczka1/fuzzy1/67018042.err
Error in line 7: pcTr6pWQjpX S75 32,5
Error in line 6: A19 S75 15,0
Error in line 12: pcTr6pWQjpX A19 88,2
Error in line 16: 444mi S75 32,5
Error in line 13: mAnQrvhW S404 86,6
